<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            style="@style/headerText"
            android:text="@string/label_account_info"
            android:layout_marginBottom="20dp"/>

        <RelativeLayout
            style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/nameImageView"
                android:src="@drawable/ic_name"
                style="@style/profileDetailsImage" />

            <TextView
                android:id="@+id/nameTextView"
                android:text="@string/label_name_user"
                android:layout_toEndOf="@id/nameImageView"
                style="@style/profileDetailsTextMain" />

            <TextView
                android:id="@+id/tv_name_user"
                tools:text="developer"
                android:layout_toEndOf="@id/nameImageView"
                style="@style/profileDetailsMiniText" />
        </RelativeLayout>

        <View style="@style/proifleDetailsView" />

        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/mobileImageView"
                android:src="@drawable/ic_mobile"
                style="@style/profileDetailsImage" />

            <TextView
                android:text="@string/label_mobile_user"
                android:layout_toEndOf="@id/mobileImageView"
                style="@style/profileDetailsTextMain"/>

            <TextView
                android:id="@+id/tv_mobile_user"
                tools:text="+62-81345019699"
                android:layout_toEndOf="@id/mobileImageView"
                style="@style/profileDetailsMiniText" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />
        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/emailImageView"
                android:src="@drawable/ic_email"
                style="@style/profileDetailsImage" />

            <TextView
                android:text="@string/label_email_user"
                android:layout_toEndOf="@id/emailImageView"
                style="@style/profileDetailsTextMain" />

            <TextView
                tools:text="developer@appsnipp.com"
                android:id="@+id/tv_content_email_user"
                android:layout_toEndOf="@id/emailImageView"
                style="@style/profileDetailsMiniText" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />
        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/addressImageView"
                android:src="@drawable/ic_address"
                style="@style/profileDetailsImage" />

            <TextView
                android:text="@string/label_address_user"
                android:layout_toEndOf="@id/addressImageView"
                style="@style/profileDetailsTextMain" />

            <TextView
                tools:text="Avenue 2nd Street NW SY."
                android:id="@+id/tv_address_user"
                android:layout_toEndOf="@id/addressImageView"
                style="@style/profileDetailsMiniText" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />
        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/dobImageView"
                android:src="@drawable/ic_dob"
                style="@style/profileDetailsImage" />

            <TextView
                android:text="@string/title_dob_user"
                android:layout_toEndOf="@id/dobImageView"
                style="@style/profileDetailsTextMain" />

            <TextView
                tools:text="12-05-1990"
                android:id="@+id/tv_dob_user"
                android:layout_toEndOf="@id/dobImageView"
                style="@style/profileDetailsMiniText" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>