<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/img_poster_movie_list"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:contentDescription="@string/description_poster"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@color/colorPrimary" />

    <ProgressBar
        android:id="@+id/progress_vote_movie"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:progress="50"
        android:progressDrawable="@drawable/circle"
        app:layout_constraintStart_toEndOf="@id/img_poster_movie_list"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_vote_movie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textColor="@color/colorSecondaryText"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/progress_vote_movie"
        app:layout_constraintEnd_toEndOf="@id/progress_vote_movie"
        app:layout_constraintStart_toStartOf="@id/progress_vote_movie"
        app:layout_constraintTop_toTopOf="@id/progress_vote_movie"
        android:text="50%" />

    <TextView
        android:id="@+id/tv_title_movie_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_date_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/progress_vote_movie"
        app:layout_constraintTop_toTopOf="@+id/progress_vote_movie"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="Judul Movie" />

    <TextView
        android:id="@+id/tv_date_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/progress_vote_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/progress_vote_movie"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_movie_list"
        android:text="Release Date: 01-01-2019" />

    <TextView
        android:id="@+id/tv_overview_movie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/btn_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_poster_movie_list"
        app:layout_constraintTop_toBottomOf="@id/progress_vote_movie"
        android:text="After fighting his demons for decades, John Rambo now lives in peace on his family ranch in Arizona, but his rest is interrupted when Gabriela, the granddaughter of his housekeeper María, disappears after crossing the border into Mexico to meet her biological father. Rambo, who has become a true father figure for Gabriela over the years, undertakes a desperate and dangerous journey to find her." />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_like"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:text="@string/title_favorite"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:icon="@drawable/ic_favorite_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_share"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/img_poster_movie_list"
        app:layout_constraintStart_toStartOf="@+id/tv_overview_movie"
        app:layout_constraintTop_toBottomOf="@id/tv_overview_movie" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/title_share"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:icon="@drawable/ic_share_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_overview_movie"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_like"
        app:layout_constraintTop_toTopOf="@id/btn_like" />
</androidx.constraintlayout.widget.ConstraintLayout>